--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Church Vale Allotment Association
+description: Church Vale Allotments in High Pittington, County Durham
